Changes from V8.0
=================

Vernacular commands

- Added "Print Ltac qualid" to print a user defined tactic (doc TODO)
- Added "Print Rewrite HintDb" to print the content of a DB used by
  autorewrite (doc TODO)
- Added "Print Canonical Projections" (doc TODO)

Gallina

- Added disjunctive patterns in match-with patterns

Ltac

- New primitive "external" for communication with tool external to Coq
- Semantics of "match t with" changed: if a clause returns a
  tactic, it is now applied to the current goal. If it fails, the next
  clause or next matching subterm is tried (i.e. it behaves as "match
  goal with").
- New modifier "lazy" (TODO) for "match t with" and "match goal with" telling
  to delay the evaluation of tactic expression.

Tactics

- New implementation and generalization of [setoid_]* (setoid_rewrite,
  setoid_symmetry, setoid_transitivity, setoid_reflexivity and autorewite).
  New syntax for declaring relations and morphisms (old syntax still working
  with minor modifications, but deprecated) (doc TODO)
- Added "clear - id" to clear all hypotheses except the ones depending in id.
- Added "dependent rewrite term" and "dependent rewrite term in hyp" (doc TODO)
- The argument of Declare Left Step and Declare Right Step is now a term
  (it used to be a reference) (doc TODO)
- Omega now handles arbitrary precision integers
- Idtac can now be left implicit in a [...|...] construct: for instance, 
  [ foo | | bar ] stands for [ foo | idtac | bar ]. (doc TODO). 
- "Tactic Notation" extended to allow notations of tacticals (doc TODO).
- Added "autorewrite with ... in hyp [using ...]" (doc TODO).
- 

Modules

- Added "Locate Module qualid" to get the full path of a module.
- Module/Declare Module syntax made more uniform (doc TODO)
- Added syntactic sugar "Declare Module Export/Import" and
  "Module Export/Import" (doc TODO)
- Added syntactic sugar "Module M(Export/Import X Y: T)" and
  "Module Type M(Export/Import X Y: T)"